@@ -23,10 +23,10 @@
 
 
     <parent>
-	  <groupId>org.wso2.andes</groupId>
-	  <artifactId>andes-parent</artifactId>
-          <version>3.0.0-SNAPSHOT</version>
-           <relativePath>../../pom.xml</relativePath>
+        <groupId>org.wso2.andes</groupId>
+        <artifactId>andes-parent</artifactId>
+        <version>3.0.0-SNAPSHOT</version>
+        <relativePath>../../pom.xml</relativePath>
     </parent>
 
     <modelVersion>4.0.0</modelVersion>
@@ -36,39 +36,39 @@
     <name>WSO2 Carbon - Dependencies - Andes</name>
 
     <dependencies>
-    	<dependency>
-          <groupId>biz.aQute</groupId>
-          <artifactId>bnd</artifactId>
-        </dependency>
-
-	<dependency>
-          <groupId>org.apache.cassandra</groupId>
-          <artifactId>cassandra-all</artifactId>
+        <dependency>
+            <groupId>biz.aQute</groupId>
+            <artifactId>bnd</artifactId>
         </dependency>
 
         <dependency>
-          <groupId>org.apache.cassandra</groupId>
-          <artifactId>cassandra-javautils</artifactId>
+            <groupId>org.apache.cassandra</groupId>
+            <artifactId>cassandra-all</artifactId>
         </dependency>
 
         <dependency>
+            <groupId>org.apache.cassandra</groupId>
+            <artifactId>cassandra-javautils</artifactId>
+        </dependency>
+
+        <!--dependency>
           <groupId>org.apache.cassandra</groupId>
           <artifactId>cassandra-thrift</artifactId>
+        </dependency-->
+
+        <dependency>
+            <groupId>com.ibm.icu</groupId>
+            <artifactId>icu4j</artifactId>
         </dependency>
 
         <dependency>
-          <groupId>com.ibm.icu</groupId>
-          <artifactId>icu4j</artifactId>
+            <groupId>commons-beanutils</groupId>
+            <artifactId>commons-beanutils-core</artifactId>
         </dependency>
 
         <dependency>
-          <groupId>commons-beanutils</groupId>
-          <artifactId>commons-beanutils-core</artifactId>
-        </dependency>
-
-        <dependency>
-          <groupId>commons-cli</groupId>
-          <artifactId>commons-cli</artifactId>
+            <groupId>commons-cli</groupId>
+            <artifactId>commons-cli</artifactId>
         </dependency>
 
         <dependency>
@@ -76,19 +76,19 @@
             <artifactId>org.apache.commons.codec</artifactId>
         </dependency>
 
-	<dependency>
-          <groupId>commons-collections</groupId>
-          <artifactId>commons-collections</artifactId>
+        <dependency>
+            <groupId>commons-collections</groupId>
+            <artifactId>commons-collections</artifactId>
         </dependency>
 
         <dependency>
-          <groupId>commons-configuration</groupId>
-          <artifactId>commons-configuration</artifactId>
+            <groupId>commons-configuration</groupId>
+            <artifactId>commons-configuration</artifactId>
         </dependency>
 
         <dependency>
-          <groupId>commons-digester</groupId>
-          <artifactId>commons-digester</artifactId>
+            <groupId>commons-digester</groupId>
+            <artifactId>commons-digester</artifactId>
         </dependency>
 
         <dependency>
@@ -102,18 +102,28 @@
         </dependency>
 
         <dependency>
-          <groupId>commons-logging</groupId>
-          <artifactId>commons-logging-api</artifactId>
+            <groupId>commons-logging</groupId>
+            <artifactId>commons-logging-api</artifactId>
         </dependency>
 
         <dependency>
-          <groupId>commons-pool</groupId>
-          <artifactId>commons-pool</artifactId>
+            <groupId>commons-pool</groupId>
+            <artifactId>commons-pool</artifactId>
         </dependency>
 
         <dependency>
-          <groupId>org.apache.derby</groupId>
-          <artifactId>derby</artifactId>
+            <groupId>org.apache.derby</groupId>
+            <artifactId>derby</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.apache.felix</groupId>
+            <artifactId>org.apache.felix.framework</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.apache.felix</groupId>
+            <artifactId>org.apache.felix.main</artifactId>
         </dependency>
 
         <dependency>
@@ -122,20 +132,15 @@
         </dependency>
 
         <dependency>
-          <groupId>org.apache.geronimo.specs</groupId>
-          <artifactId>geronimo-jms_1.1_spec</artifactId>
+            <groupId>org.apache.geronimo.specs</groupId>
+            <artifactId>geronimo-jms_1.1_spec</artifactId>
         </dependency>
 
         <dependency>
-          <groupId>com.google.guava</groupId>
-          <artifactId>guava</artifactId>
+            <groupId>org.hectorclient</groupId>
+            <artifactId>hector-core</artifactId>
         </dependency>
-        
-        <dependency>
-	<groupId>org.hectorclient</groupId>
-	<artifactId>hector-core</artifactId>
-	</dependency>
-            
+
         <dependency>
             <groupId>com.github.stephenc.high-scale-lib</groupId>
             <artifactId>high-scale-lib</artifactId>
@@ -162,24 +167,24 @@
         </dependency>
 
         <dependency>
-          <groupId>org.json</groupId>
-          <artifactId>json</artifactId>
+            <groupId>org.json</groupId>
+            <artifactId>json</artifactId>
         </dependency>
 
         <dependency>
-          <groupId>org.slf4j</groupId>
-          <artifactId>jul-to-slf4j</artifactId>
+            <groupId>org.slf4j</groupId>
+            <artifactId>jul-to-slf4j</artifactId>
         </dependency>
 
         <dependency>
-          <groupId>junit</groupId>
-          <artifactId>junit</artifactId>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
         </dependency>
 
-        <dependency>
+        <!--dependency>
           <groupId>org.apache.thrift</groupId>
           <artifactId>libthrift</artifactId>
-        </dependency>
+        </dependency-->
 
         <dependency>
             <groupId>log4j</groupId>
@@ -187,51 +192,51 @@
         </dependency>
 
         <dependency>
-          <groupId>org.apache.maven</groupId>
-          <artifactId>maven-ant-tasks</artifactId>
+            <groupId>org.apache.maven</groupId>
+            <artifactId>maven-ant-tasks</artifactId>
         </dependency>
 
         <dependency>
-          <groupId>org.apache.mina</groupId>
-          <artifactId>mina-core</artifactId>
+            <groupId>org.apache.mina</groupId>
+            <artifactId>mina-core</artifactId>
         </dependency>
 
         <dependency>
-          <groupId>org.apache.mina</groupId>
-          <artifactId>mina-filter-ssl</artifactId>
+            <groupId>org.apache.mina</groupId>
+            <artifactId>mina-filter-ssl</artifactId>
         </dependency>
         <dependency>
-                <groupId>com.googlecode.disruptor.wso2</groupId>
-                <artifactId>disruptor</artifactId>
-		<version>2.10.4-wso2v2</version>
+            <groupId>com.googlecode.disruptor.wso2</groupId>
+            <artifactId>disruptor</artifactId>
+            <version>2.10.4-wso2v2</version>
         </dependency>
 
-       <dependency>
+        <dependency>
             <groupId>com.datastax.cassandra.wso2</groupId>
             <artifactId>cql-driver</artifactId>
             <version>1.0.5.wso2v1</version>
         </dependency>
 
-<!--eclipse set-->
+        <!--eclipse set-->
 
         <dependency>
-          <groupId>org.eclipse.core</groupId>
-          <artifactId>org.eclipse.core.commands</artifactId>
+            <groupId>org.eclipse.core</groupId>
+            <artifactId>org.eclipse.core.commands</artifactId>
         </dependency>
 
         <dependency>
-          <groupId>org.eclipse.core</groupId>
-          <artifactId>org.eclipse.core.contenttype</artifactId>
+            <groupId>org.eclipse.core</groupId>
+            <artifactId>org.eclipse.core.contenttype</artifactId>
         </dependency>
 
         <dependency>
-          <groupId>org.eclipse.core.databinding</groupId>
-          <artifactId>beans</artifactId>
+            <groupId>org.eclipse.core.databinding</groupId>
+            <artifactId>beans</artifactId>
         </dependency>
 
         <dependency>
-          <groupId>org.eclipse.core</groupId>
-          <artifactId>org.eclipse.core.expressions</artifactId>
+            <groupId>org.eclipse.core</groupId>
+            <artifactId>org.eclipse.core.expressions</artifactId>
         </dependency>
 
         <dependency>
@@ -241,22 +246,22 @@
 
 
         <dependency>
-          <groupId>org.eclipse.core</groupId>
-          <artifactId>org.eclipse.core.runtime</artifactId>
-        </dependency>
-
-         <dependency>
-           <groupId>org.eclipse.equinox</groupId>
-           <artifactId>app</artifactId>
-        </dependency>
-        <dependency>
-          <groupId>org.eclipse.equinox</groupId>
-          <artifactId>org.eclipse.equinox.app</artifactId>
+            <groupId>org.eclipse.core</groupId>
+            <artifactId>org.eclipse.core.runtime</artifactId>
         </dependency>
 
         <dependency>
-          <groupId>org.eclipse.equinox</groupId>
-          <artifactId>org.eclipse.equinox.common</artifactId>
+            <groupId>org.eclipse.equinox</groupId>
+            <artifactId>app</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.eclipse.equinox</groupId>
+            <artifactId>org.eclipse.equinox.app</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.eclipse.equinox</groupId>
+            <artifactId>org.eclipse.equinox.common</artifactId>
         </dependency>
 
         <dependency>
@@ -280,28 +285,28 @@
         </dependency>
 
         <dependency>
-          <groupId>org.eclipse.swt.carbon</groupId>
-          <artifactId>macosx</artifactId>
+            <groupId>org.eclipse.swt.carbon</groupId>
+            <artifactId>macosx</artifactId>
         </dependency>
 
         <dependency>
-          <groupId>org.eclipse.swt.gtk.linux</groupId>
-          <artifactId>x86</artifactId>
+            <groupId>org.eclipse.swt.gtk.linux</groupId>
+            <artifactId>x86</artifactId>
         </dependency>
 
         <dependency>
-          <groupId>org.eclipse.swt.gtk.linux</groupId>
-          <artifactId>x86_64</artifactId>
+            <groupId>org.eclipse.swt.gtk.linux</groupId>
+            <artifactId>x86_64</artifactId>
         </dependency>
 
         <dependency>
-          <groupId>org.eclipse.swt.gtk.solaris</groupId>
-          <artifactId>sparc</artifactId>
+            <groupId>org.eclipse.swt.gtk.solaris</groupId>
+            <artifactId>sparc</artifactId>
         </dependency>
 
         <dependency>
-          <groupId>org.eclipse.swt.win32.win32</groupId>
-          <artifactId>x86</artifactId>
+            <groupId>org.eclipse.swt.win32.win32</groupId>
+            <artifactId>x86</artifactId>
         </dependency>
 
         <dependency>
@@ -324,12 +329,12 @@
             <artifactId>ui</artifactId>
         </dependency>
 
-<!-- end of eclipse set-->
+        <!-- end of eclipse set-->
 
 
         <dependency>
-          <groupId>org.perf4j</groupId>
-          <artifactId>perf4j</artifactId>
+            <groupId>org.perf4j</groupId>
+            <artifactId>perf4j</artifactId>
         </dependency>
 
         <dependency>
@@ -338,64 +343,101 @@
         </dependency>
 
         <dependency>
-          <groupId>org.slf4j</groupId>
-          <artifactId>slf4j-api</artifactId>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
         </dependency>
 
         <dependency>
-          <groupId>org.slf4j</groupId>
-          <artifactId>slf4j-log4j12</artifactId>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-log4j12</artifactId>
         </dependency>
 
         <dependency>
-          <groupId>com.ecyrd.speed4j</groupId>
-          <artifactId>speed4j</artifactId>
+            <groupId>com.ecyrd.speed4j</groupId>
+            <artifactId>speed4j</artifactId>
         </dependency>
 
         <dependency>
-        <groupId>com.eaio.uuid</groupId>
-        <artifactId>uuid</artifactId>
+            <groupId>com.eaio.uuid</groupId>
+            <artifactId>uuid</artifactId>
         </dependency>
 
         <dependency>
-          <groupId>velocity</groupId>
-          <artifactId>velocity</artifactId>
+            <groupId>velocity</groupId>
+            <artifactId>velocity</artifactId>
         </dependency>
 
         <dependency>
-          <groupId>xalan</groupId>
-          <artifactId>xalan</artifactId>
+            <groupId>xalan</groupId>
+            <artifactId>xalan</artifactId>
         </dependency>
 
         <dependency>
-          <groupId>org.apache.ant</groupId>
-          <artifactId>ant</artifactId>
+            <groupId>org.apache.ant</groupId>
+            <artifactId>ant</artifactId>
         </dependency>
 
         <!--MQTT Dependencies-->
         <dependency>
-		<groupId>io.netty</groupId>
-		<artifactId>netty-all</artifactId>
-		<optional>true</optional>
-       </dependency>
+            <groupId>io.netty</groupId>
+            <artifactId>netty-all</artifactId>
+            <optional>true</optional>
+        </dependency>
 
 
-       <dependency>
+        <dependency>
             <groupId>org.fusesource.hawtdb</groupId>
             <artifactId>hawtdb</artifactId>
-        </dependency> 
-       
+        </dependency>
+
         <dependency>
             <groupId>org.fusesource.hawtbuf</groupId>
             <artifactId>hawtbuf</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>com.h2database</groupId>
+            <artifactId>h2</artifactId>
+        </dependency>
+
         <!--Hzelcast Dependencies-->
         <dependency>
-             <groupId>com.hazelcast.wso2</groupId>
-             <artifactId>hazelcast</artifactId>
+            <groupId>com.hazelcast.wso2</groupId>
+            <artifactId>hazelcast</artifactId>
         </dependency>
-     
+
+        <dependency>
+            <groupId>org.wso2.carbon</groupId>
+            <artifactId>org.wso2.carbon.core</artifactId>
+        </dependency>
+
+        <!--Thrift Dependency-->
+
+        <dependency>
+            <groupId>libthrift.wso2</groupId>
+            <artifactId>libthrift</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>tomcat</groupId>
+            <artifactId>naming-factory</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>tomcat</groupId>
+            <artifactId>naming-resources</artifactId>
+        </dependency>
+
+        <dependency>
+              <groupId>org.wso2.carbon</groupId>
+              <artifactId>org.wso2.carbon.core</artifactId>
+        </dependency>
+       <!--Thrift Dependency-->
+        <dependency>
+            <groupId>libthrift.wso2</groupId>
+            <artifactId>libthrift</artifactId>
+        </dependency>
+  
     </dependencies>
 
     <build>
@@ -471,22 +513,22 @@
                         <id>copy</id>
                         <phase>process-sources</phase>
                         <goals>
-                          <goal>copy</goal>
+                            <goal>copy</goal>
                         </goals>
                         <configuration>
                             <artifactItems>
-                              <artifactItem>
-                                 <groupId>javacc</groupId>
-                                 <artifactId>javacc</artifactId>
-                                 <version>3.2</version>
-                                 <type>jar</type>
-                                 <overWrite>false</overWrite>
-                                 <outputDirectory>lib</outputDirectory>
-                                 <destFileName>javacc.jar</destFileName>
-                               </artifactItem>
-                             </artifactItems>
+                                <artifactItem>
+                                    <groupId>javacc</groupId>
+                                    <artifactId>javacc</artifactId>
+                                    <version>3.2</version>
+                                    <type>jar</type>
+                                    <overWrite>false</overWrite>
+                                    <outputDirectory>lib</outputDirectory>
+                                    <destFileName>javacc.jar</destFileName>
+                                </artifactItem>
+                            </artifactItems>
                         </configuration>
-                      </execution>
+                    </execution>
 
                 </executions>
             </plugin>
@@ -571,12 +613,12 @@
                             <goal>deploy-file</goal>
                         </goals>
                         <configuration>
-                        <groupId>org.wso2.andes</groupId>
-                        <artifactId>andes-client</artifactId>
-                        <version>${andes.version}</version>
-                        <packaging>jar</packaging>
-                        <file>build/lib/qpid-client-${andes.version}.jar</file>
-                        <generatePom>true</generatePom>
+                            <groupId>org.wso2.andes</groupId>
+                            <artifactId>andes-client</artifactId>
+                            <version>${andes.version}</version>
+                            <packaging>jar</packaging>
+                            <file>build/lib/qpid-client-${andes.version}.jar</file>
+                            <generatePom>true</generatePom>
                         </configuration>
                     </execution>
                     <execution>
@@ -626,7 +668,7 @@
                     </execution>
                 </executions>
             </plugin>
-             <plugin>
+            <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-clean-plugin</artifactId>
                 <version>2.4.1</version>
@@ -645,10 +687,22 @@
                     </filesets>
                 </configuration>
             </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>2.14.1</version>
+                <configuration>
+                    <skipTests>true</skipTests>
+                    <forkCount>1</forkCount>
+                    <reuseForks>false</reuseForks>
+                    <parallel>classes</parallel>
+                    <argLine>-Xmx500m -XX:MaxPermSize=256m</argLine>
+                </configuration>
+            </plugin>
         </plugins>
     </build>
 
- 
+
     <repositories>
         <repository>
             <id>wso2-nexus</id>
@@ -670,9 +724,9 @@
             <name>SpringSource Enterprise Bundle Repository - External Bundle Releases</name>
             <url>http://repository.springsource.com/maven/bundles/external</url>
         </repository>
-       <repository>
+        <repository>
             <id>jboss-maven-repository</id>
-            <name>JBoss Maven Repository </name>
+            <name>JBoss Maven Repository</name>
             <url>http://repository.jboss.org/nexus/content/groups/public/</url>
         </repository>
     </repositories>
